Address review findings from PR #20 (own review, Copilot, SonarQube)
Own review:
- Drop the "not managed by the Spring Boot BOM" property comments in pom.xml

Coverage (Quality Gate was failing at 68.2% on new code):
- Add SpringRabbitAutoConfigurationTest#testListenerContainerIsRegisteredAs-
  SingletonWithGenericTargetType, covering the registerBean customizer that
  sets the singleton scope and the generic target type. It was the only
  uncovered spot in the new code (5 lines + 2 conditions), which alone dragged
  new-code coverage below the 80% threshold.

SonarQube:
- S6201: pattern matching for instanceof in ValidationErrorHandler
- S6204: Stream.toList() instead of collect(Collectors.toList())
- S9024: @InjectMocks in RabbitAdminCreatorTest
- S8714: assertThrows() instead of try/catch + fail() in
  BeanValidationTestSupportTest
- S5786: drop redundant public modifiers from JUnit 5 test classes and methods
  (44 classes, 271 methods)

Additionally, QueueMasterLocatorConnectionFactoryTest still used the
try/catch-without-fail pattern that Copilot flagged elsewhere, so it would
have stayed green even if the validation was removed; switched to
assertThrows as well.

Verified with 241 unit tests and 20 integration tests.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>