@@ -2,7 +2,6 @@ package com.avides.spring.rabbit.configuration.creator;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.amqp.rabbit.connection.CachingConnectionFactory;
 import org.springframework.amqp.rabbit.connection.ConnectionFactory;
@@ -42,7 +41,7 @@ public class CustomConnectionFactoryCreator implements Creator<ConnectionFactory
         return Arrays.stream(StringUtils.commaDelimitedListToStringArray(addresses))
                 .map(String::strip)
                 .filter(StringUtils::hasText)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static CachingConnectionFactory createCachingConnectionFactory(RabbitProperties rabbitProperties)
